# pfc-mcp

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  README.zh-CN.md  WARP.md  addon.py  pyproject.toml  server.json
.github/workflows/: publish-bridge.yml  publish.yml  test.yml
docker/: Dockerfile  README.md  build.sh  docker-compose.yml  entrypoint.sh  run.sh
docs/agentic/: itasca-mcp-bootstrap-claude.md  itasca-mcp-bootstrap-codex.md  itasca-mcp-bootstrap-copilot.md  itasca-mcp-bootstrap-gemini.md  itasca-mcp-bootstrap-opencode.md  itasca-mcp-bootstrap-toyoura-nagisa.md  itasca-mcp-bootstrap.md  pfc-mcp-bootstrap-claude-codex.md  pfc-mcp-bootstrap-claude.md  pfc-mcp-bootstrap-codex.md  pfc-mcp-bootstrap-gemini.md  pfc-mcp-bootstrap-opencode.md  pfc-mcp-bootstrap-toyoura-nagisa.md  pfc-mcp-bootstrap.md
docs/development/: source-install.md  source-install.zh-CN.md
header/: README.md  add_title.py  montage.py  montage_2x2.py  render_all.py
header/3dec/: 3dec_toppling.py  render.py
header/3dec/data/: 3dec_toppling.json
header/flac/: flac_slope_srm.py  render.py
header/flac/data/: flac_slope.json
header/mpoint/: mpoint_runout.py  render.py
header/mpoint/data/: mpoint_runout.txt
header/pfc/: README.md  pfc_biaxial.py  render.py  render_vel.py
header/pfc/data/: pfc_biaxial_relaxed.json  pfc_biaxial_shear.json
pfc-bridge/: README.md  README.zh-CN.md  pyproject.toml  start_bridge.py
pfc-bridge/src/pfc_mcp_bridge/: __init__.py  __main__.py
pfc-bridge/src/pfc_mcp_bridge/execution/: main_thread.py  script.py
pfc-bridge/src/pfc_mcp_bridge/handlers/: context.py
pfc-bridge/src/pfc_mcp_bridge/tasks/: manager.py  task.py
pfc-bridge/src/pfc_mcp_bridge/utils/: __init__.py  command_splitter.py
pfc-mcp-bridge/: CHANGELOG.md  README.md  README.zh-CN.md  pyproject.toml  start_bridge.py
pfc-mcp-bridge/src/pfc_mcp_bridge/: __init__.py  server.py
pfc-mcp-bridge/src/pfc_mcp_bridge/execution/: snippet.py
pfc-mcp-bridge/src/pfc_mcp_bridge/handlers/: __init__.py  diagnostics.py  exec_strategy.py  execute_code.py  script_executor.py  tasks.py  workspace.py
pfc-mcp-bridge/src/pfc_mcp_bridge/signals/: __init__.py  cycle_executor.py  interrupt.py  script_executor.py
pfc-mcp-bridge/src/pfc_mcp_bridge/tasks/: manager.py  task.py
pfc-mcp-bridge/src/pfc_mcp_bridge/utils/: response.py
scripts/corpus/: STRUCTURE_DESIGN.md  bootstrap_missing.py  extract_figure_refs.py  figure_manifest.json  flag_figure_defined.py  generate_3dec_boundary_conditions.py  generate_3dec_fish_intrinsics.py  generate_3dec_geometry_data_table.py  generate_3dec_histories_and_results.py  generate_3dec_index.py  generate_3dec_initial_conditions.py  generate_3dec_joint_models.py  generate_3dec_plot_items.py  generate_3dec_python_skeleton.py  generate_index.py  generate_massflow_index.py  generate_massflow_plot_items.py  generate_massflow_python_skeleton.py  generate_mpoint_conditions.py  generate_mpoint_fish_intrinsics.py  generate_mpoint_index.py  generate_mpoint_plot_items.py  generate_mpoint_python_skeleton.py  migrate_to_versioned.py  optimize_keywords.py  parse_3dec900.py  parse_3dec_python.py  parse_3dec_structural_properties.py  parse_brick_rblock.py  parse_massflow.py  parse_massflow_python.py  parse_mpoint.py  parse_pfc600.py  parse_pfc700.py  parse_pfc900.py  wire_common_constitutive_models.py  wire_common_range_elements.py  wire_massflow_common_references.py  wire_mpoint_common_references.py
src/itasca_mcp/: __init__.py  config.py  formatting.py  server.py  utils.py
src/itasca_mcp/bridge/: client.py
src/itasca_mcp/knowledge/: __init__.py  config.py
src/itasca_mcp/knowledge/adapters/: __init__.py  api_adapter.py  command_adapter.py
src/itasca_mcp/knowledge/commands/: __init__.py  formatter.py  loader.py  models.py
src/itasca_mcp/knowledge/models/: __init__.py  document.py  search_result.py
src/itasca_mcp/knowledge/python_api/: __init__.py  formatter.py  loader.py  models.py
src/itasca_mcp/knowledge/query/: __init__.py  api_search.py  command_search.py
src/itasca_mcp/knowledge/references/: __init__.py  formatter.py  loader.py
src/itasca_mcp/knowledge/search/: __init__.py  legacy_models.py
src/itasca_mcp/tools/: __init__.py  browse_commands.py  browse_python_api.py  browse_reference.py  check_task_status.py  execute_code.py  execute_task.py  interrupt_task.py  list_tasks.py  query_command.py  query_python_api.py
src/pfc_mcp/: __init__.py  config.py  contracts.py  formatting.py  server.py  utils.py
src/pfc_mcp/bridge/: __init__.py  client.py  task_manager.py
src/pfc_mcp/docs/adapters/: __init__.py  api_adapter.py  command_adapter.py
src/pfc_mcp/docs/commands/: __init__.py  formatter.py  loader.py  models.py
src/pfc_mcp/docs/models/: __init__.py  document.py  search_result.py
src/pfc_mcp/docs/python_api/: __init__.py  formatter.py  loader.py  models.py
src/pfc_mcp/docs/query/: __init__.py  api_search.py  command_search.py
src/pfc_mcp/docs/references/: __init__.py  formatter.py  loader.py
src/pfc_mcp/docs/search/: __init__.py  base.py  keyword_matcher.py
src/pfc_mcp/knowledge/adapters/: __init__.py  api_adapter.py  command_adapter.py
src/pfc_mcp/knowledge/commands/: __init__.py  formatter.py  loader.py  models.py
src/pfc_mcp/knowledge/models/: __init__.py  document.py  search_result.py
src/pfc_mcp/knowledge/python_api/: __init__.py  formatter.py  (+1 more)
src/pfc_mcp/scripts/: plot_capture.py
src/pfc_mcp/tools/: __init__.py  browse_commands.py  browse_python_api.py  browse_reference.py  capture_plot.py  check_task_status.py  error_messages.py  execute_code.py  execute_task.py  interrupt_task.py  list_tasks.py  query_command.py  query_python_api.py  task_formatting.py
tests/: test_addon.py  test_command_splitter.py  test_contact_type_expansion.py  test_docs_tool_contracts.py  test_figure_reference.py  test_formatting.py  test_multi_engine_software.py  test_phase2_tools.py  test_phase3_capture_plot.py  test_python_api_array_docs.py  test_rblock_python_api.py  test_tool_contracts.py  test_versioned_schema.py
(+1158 files in other folders)
