[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfc-mcp"
version = "0.1.0"
description = "MCP server for ITASCA PFC discrete element simulation control and documentation"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name= "Yusong Han", email = "yusong.han.652@gmail.com" }, { name = "Nagisa Toyoura", email = "nagisa.toyoura@gmail.com" }]
keywords = ["pfc", "itasca", "mcp", "simulation", "discrete-element", "dem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=2.14.0",
    "pydantic>=2.12.0",
    "websockets>=15.0.1",
]
readme = "README.md"

[project.scripts]
pfc-mcp = "pfc_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/pfc_mcp"]
