[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "itasca-mcp"
dynamic = ["version"]
description = "MCP server for ITASCA software (PFC, FLAC3D, 3DEC) simulation workflows"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name= "Yusong Han", email = "yusong.han.652@gmail.com" }, { name = "Nagisa Toyoura", email = "nagisa.toyoura@gmail.com" }]
keywords = ["pfc", "itasca", "itasca-software", "flac", "3dec", "mcp", "simulation", "discrete-element", "dem"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastmcp>=3.0.0",
    "pydantic>=2.12.0",
    "httpx>=0.27",
]
readme = "README.md"

[project.scripts]
itasca-mcp = "itasca_mcp.server:main"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N"]
ignore = [
    "E501",    # line too long (handled by line-length setting)
    "SIM105",  # contextlib.suppress — less clear for async code
    "SIM102",  # nested if — sometimes more readable
    "SIM103",  # return condition directly
    "SIM108",  # ternary — not always clearer for long expressions
    "N806",    # uppercase variable in function — used for constants
    "B008",    # function call in defaults — needed for FastMCP tool signatures
    "B905",    # zip strict — internal code with guaranteed equal lengths
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["itasca_mcp.knowledge.resources.command_docs.*"]
ignore_errors = true

[tool.hatch.version]
path = "src/itasca_mcp/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/itasca_mcp"]
