[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pfc-mcp-bridge"
version = "0.2.6"
description = "WebSocket bridge for ITASCA PFC - runs inside PFC GUI to enable remote simulation control"
requires-python = ">=3.6"
license = { text = "MIT" }
authors = [{ name= "Yusong Han", email = "yusong.han.652@gmail.com" }, { name = "Nagisa Toyoura", email = "nagisa.toyoura@gmail.com" }]
keywords = ["pfc", "itasca", "itasca-software", "flac", "3dec", "mcp", "simulation", "discrete-element", "dem", "websocket", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "websockets==9.1; python_version < '3.10'",
    "websockets==16.0; python_version >= '3.10'",
]
readme = "README.md"

[project.scripts]
pfc-mcp-bridge = "pfc_mcp_bridge.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pfc_mcp_bridge"]
